cleaned up scripts and improved directory organization
Former-commit-id: 9061b3e732d861d36b2b348bef6ca0357903ef1e

--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,9 @@
 *.rda
 *e784096*
 *o784096*
-*.png
-*.pdf
+*/Extracted_Data/*
+*/precip/*
+*/tmax/*
+*vectdyn_fulldata.csv
+*counts*.csv
+*/AggByLocation/*
