Modified README.md and .gitignore
Former-commit-id: 67d8f39e69f31f5cc0d3011424fca3397e42b674

--- a/.gitignore
+++ b/.gitignore
@@ -3,13 +3,11 @@
 *.rda
 *e784096*
 *o784096*
-*/Extracted_Data/*
-*/precip/*.csv
-*/precip/*.nc
-*/tmax/*.csv
-*/tmax/*.nc
+/Extracted_Data/*
+*/precip/*
+*/tmax/*
 *vectdyn_fulldata.csv
 *counts*.csv
 */AggByLocation/*
-*/Sandbox/*
-*/Results/*
+/Sandbox/*
+/Results/*
