--- a/.gitignore
+++ b/.gitignore
@@ -3,11 +3,10 @@
 *.rda
 *e784096*
 *o784096*
-/Extracted_Data/*
+/Extracted_Data/
 */precip/*
 */tmax/*
 *vectdyn_fulldata.csv
 *counts*.csv
 */AggByLocation/*
-/Sandbox/*
-/Results/*
+/Sandbox/
